fire: adiciona páginas html, adiciona styles.css

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
     <header>
+        <img id="logo" src="./img/logo.jpg"/>
         <nav>
             <ul>
-                <li>HOME</li> 
-                <li>CONTATO</li> 
-                <li>FOTOS</li> 
-                <li>COMENTÁRIOS</li>    
+                <a href="./home.html"></a><li>HOME</li> 
+                <a href="./contato.html"></a><li>CONTATO</li> 
+                <a href="./fotos.html"></a><li>FOTOS</li> 
+                <a href="./comentarios.html"></a><li>COMENTÁRIOS</li>    
             </ul>
         </nav>
     </header>
