:sparkles: feat: cria cabeçalho

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="./img/logo.jpg"/>
+        
         <nav>
             <ul>
-                <a href="./home.html"></a><li>HOME</li> 
-                <a href="./contato.html"></a><li>CONTATO</li> 
-                <a href="./fotos.html"></a><li>FOTOS</li> 
-                <a href="./comentarios.html"></a><li>COMENTÁRIOS</li>    
+                <a href="./home.html"><li>HOME</li></a> 
+                <a href="./contato.html"><li>CONTATO</li></a>
+                <img id="logo" src="./img/logo.jpg"/>
+                <a href="./fotos.html"><li>FOTOS</li></a> 
+                <a href="./comentarios.html"><li>COMENTÁRIOS</li></a>    
             </ul>
         </nav>
     </header>
