✨ :sparkles: Cria div class actor-cards

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         </div>
 
     </div>
-    
+    <div class="actor-cards-container">
+        <div class="cards-content">
+            <div class="card banner-1">Ezra Miller - Barry Allen</div>
+            <div class="card banner-2">Sasha - Supergirl</div>
+            <div class="card banner-3">Ben Affleck - Batman</div>
+            <div class="card banner-4">Michael Keaton - Batman</div>
+        </div>
+
+    </div>
 </body>
 </html>
