✨ :sparkles: insere imagens dos personagens html

--- a/index.html
+++ b/index.html
@@ -47,12 +47,16 @@
     </div>
     <div class="actor-cards-container">
         <div class="cards-content">
-            <div class="card banner-1">Ezra Miller - Barry Allen</div>
+            <div class="card banner-1">Ezra Miller - Flash</div>
+            <img src="./img/flash.jpg">
             <div class="card banner-2">Sasha - Supergirl</div>
+            <img src="./img/flash-supergirl.jpg">
             <div class="card banner-3">Ben Affleck - Batman</div>
+            <img src="./img/the-flash-batman-ben.jpg">
             <div class="card banner-4">Michael Keaton - Batman</div>
+            <img src="./img/flash-batman-michael.jpg">
         </div>
 
-    </div>
+    </div> 
 </body>
 </html>
