--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
 
     </div> 
     <footer>
-        <img src="./img/logo.jpg" style="width: 150px;height: auto;">
+        <img  style="object-fit:contain;" id="logo" src="./img/logo.jpg">
         <span>Todos os direitos reservados ©</span>
         <span>Desenvolvido por Renata Santos</span>
-        <nav class="footer-navigation">
-            <ul class="footer-list">
-                <a href="./home.html"><li>HOME</li></a> 
-                <a href="./contato.html"><li>CONTATO</li></a>
-                <a href="./fotos.html"><li>FOTOS</li></a> 
-                <a href="./comentarios.html"><li>COMENTÁRIOS</li></a>    
-            </ul>
-        </nav>
+            <nav class="footer-navigation">
+                <ul class="footer-list">
+                    <a href="./home.html"><li>HOME</li></a> 
+                    <a href="./contato.html"><li>CONTATO</li></a>
+                    <a href="./fotos.html"><li>FOTOS</li></a> 
+                    <a href="./comentarios.html"><li>COMENTÁRIOS</li></a>    
+                </ul>
+            </nav>
 
     </footer>
 </body>
