--- a/home.html
+++ b/home.html
@@ -8,5 +8,20 @@
 </head>
 <body>
     HOME
+       
+</head>
+    <header>
+        <img id="logo" src="./img/logo.jpg"/>
+        
+        <nav>
+            <ul>
+                <a href="./index.html"><li>HOME</li></a> 
+                <a href="./fotos.html"><li>BREVE</li></a> 
+                <a href="./comentarios.html"><li>COMENTÁRIOS</li></a>
+                <a href="./contato.html"><li>CONTATO</li></a>    
+            </ul>
+        </nav>
+
+    </header>
 </body>
 </html>
