--- a/breve.html
+++ b/breve.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./styles.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>document-two</title>
+    <title>Breve</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <a href="./index.html"><li>HOME</li></a> 
-                <a href="./fotos.html"><li>BREVE</li></a> 
+                <a href="./breve.html"><li>BREVE</li></a> 
                 <a href="./comentarios.html"><li>COMENTÁRIOS</li></a>
                 <a href="./contato.html"><li>CONTATO</li></a>    
             </ul>
