--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <a href="./index.html"><li>HOME</li></a> 
-                <a href="./fotos.html"><li>BREVE</li></a> 
+                <a href="./breve.html"><li>BREVE</li></a> 
                 <a href="./comentarios.html"><li>COMENTÁRIOS</li></a>
                 <a href="./contato.html"><li>CONTATO</li></a>    
             </ul>
