🚚 :truck: Altera nome da página comentários para fotos

--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
         <nav class="footer-navigation">
             <ul class="footer-list">
                 <a href="./home.html"><li>HOME</li></a> 
-                <a href="./contato.html"><li>CONTATO</li></a>
-                <a href="./breve.html"><li>FOTOS</li></a> 
-                <a href="./comentarios.html"><li>COMENTÁRIOS</li></a>    
+                <a href="./breve.html"><li>BREVE</li></a> 
+                <a href="./fotos.html"><li>FOTOS</li></a>
+                <a href="./contato.html"><li>CONTATO</li></a>    
                    
             </ul>
         </nav>
-
     </footer>
 </body>
 </html>
