Altera caminho da página home.html para index.html em outras páginas

--- a/fotos.html
+++ b/fotos.html
@@ -16,7 +16,7 @@
         
         <nav>
             <ul>
-                <a href="./home.html"><li>HOME</li></a> 
+                <a href="./index.html"><li>HOME</li></a> 
                 <a href="./fotos.html"><li>FOTOS</li></a>
                 <a href="./breve.html"><li>BREVE</li></a>
                 <a href="./contato.html"><li>CONTATO</li></a> 
@@ -51,7 +51,7 @@
     
                 <ul class="footer-list">
 
-                    <a href="./home.html"><li>HOME</li></a> 
+                    <a href="./index.html"><li>HOME</li></a> 
                     <a href="./fotos.html"><li>FOTOS</li></a>
                     <a href="./breve.html"><li>BREVE</li></a>
                     <a href="./contato.html"><li>CONTATO</li></a> 
