--- a/contato.html
+++ b/contato.html
@@ -17,7 +17,7 @@
         
         <nav>
             <ul>
-                <a href="./home.html"><li>HOME</li></a> 
+                <a href="./index.html"><li>HOME</li></a> 
                 <a href="./fotos.html"><li>FOTOS</li></a>
                 <a href="./breve.html"><li>BREVE</li></a>
                 <a href="./contato.html"><li>CONTATO</li></a> 
@@ -55,7 +55,7 @@
 
             <ul class="footer-list">
 
-                <a href="./home.html"><li>HOME</li></a> 
+                <a href="./index.html"><li>HOME</li></a> 
                 <a href="./fotos.html"><li>FOTOS</li></a>
                 <a href="./breve.html"><li>BREVE</li></a>
                 <a href="./contato.html"><li>CONTATO</li></a> 
