--- a/obrigado.html
+++ b/obrigado.html
@@ -14,7 +14,7 @@
         
         <nav>
             <ul>
-                <a href="./home.html"><li>HOME</li></a> 
+                <a href="./index.html"><li>HOME</li></a> 
                 <a href="./breve.html"><li>BREVE</li></a> 
                 <a href="./fotos.html"><li>FOTOS</li></a>
                 <a href="./contato.html"><li>CONTATO</li></a>
@@ -35,7 +35,7 @@
         <nav class="footer-navigation">
 
             <ul class="footer-list">
-                <a href="./home.html"><li>HOME</li></a> 
+                <a href="./index.html"><li>HOME</li></a> 
                 <a href="./contato.html"><li>CONTATO</li></a>
                 <a href="./fotos.html"><li>FOTOS</li></a> 
                 <a href="./comentarios.html"><li>COMENTÁRIOS</li></a>    
